# financial-ops

./: .gitignore  CMakeLists.txt  README.md
include/process_operations/: process_operations.h
src/: json_utils.h  process_operations.cpp  validate_operations.h
test/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
